Week4-Intro-Final-Exercise/wordpress/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  labels:
    app: wordpress
  namespace: final-exercise
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    #hier maak je de wordpress pod aan
    spec:
      containers:
      - name: wordpress
        image: wordpress:latest
        ports:
        - containerPort: 80
          name: wordpress
        resources:
          requests:
            memory: "128Mi"
            cpu: "200m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        #deze probes kan je toevoegen als je wat met de timeout tijden speelt lukt het wel anders blokkeert ie om de 5 voet.    
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: 80
        #   failureThreshold: 1
        #   periodSeconds: 10
        # startupProbe:
        #   httpGet:
        #     path: /
        #     port: 80
        #   failureThreshold: 30
        #   periodSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: 80
        #   failureThreshold: 30
        #   periodSeconds: 10
      restartPolicy: Always
