Week4-Intro-Final-Exercise/wordpress/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: final-exercise
spec:
  selector:
    app: wordpress
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: wordpress-service
