Week4-Intro-Final-Exercise/wordpress/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: final-exercise
spec:
  rules:
    - host: wordpress.75.co.ucll.cloud
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: wordpress-service
                port:
                  number: 80
